--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,20 @@ hs_err_pid*
 # Mac OS Generated Files
 **/.DS_Store
 **/._*
+
+# react #
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+##########
