--- a/spark/docker-compose.yml
+++ b/spark/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.6"
 services:
 
   jupyterlab:
-    image: carl020958/spark-jupyterlab:3.1.2-2.2.6
+    image: jupyterlab
     container_name: jupyterlab
     restart: always
     ports:
@@ -14,7 +14,7 @@ services:
       - localnet
   
   spark-master:
-    image: carl020958/spark-master:spark-3.1.2
+    image: spark-master
     container_name: spark-master
     restart: always
     ports:
@@ -26,7 +26,7 @@ services:
       - localnet
 
   spark-worker-1:
-    image: carl020958/spark-worker:spark-3.1.2
+    image: spark-worker
     container_name: spark-worker-1
     restart: always
     environment:
@@ -42,7 +42,7 @@ services:
       - spark-master
 
   spark-worker-2:
-    image: carl020958/spark-worker:spark-3.1.2
+    image: spark-worker
     container_name: spark-worker-2
     restart: always
     environment:
@@ -74,11 +74,12 @@ services:
   
   db2:          
     image: mysql:5.7.19
+    # image: mysql:5.7 # M1
+    # platform: linux/x86_64 # M1
     container_name: mysql2 
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-
     command:
       # - --default-authentication-plugin=mysql_native_password
       - --character-set-server=utf8mb4
