--- a/spark/docker-compose.yml
+++ b/spark/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
 # spark
   jupyterlab:
-    image: carl020958/spark-jupyterlab:3.1.2-2.2.6-mecab
+    image: jupyterlab
     # image: jupyterlab
     container_name: jupyterlab
     restart: always
@@ -16,7 +16,7 @@ services:
       - localnet
   
   spark-master:
-    image: carl020958/spark-master:spark-3.1.2-mecab
+    image: spark-master
     # image: spark-master
     container_name: spark-master
     restart: always
@@ -29,7 +29,7 @@ services:
       - localnet
 
   spark-worker-1:
-    image: carl020958/spark-worker:spark-3.1.2-mecab
+    image: spark-worker
     # image: spark-worker
     container_name: spark-worker-1
     restart: always
@@ -46,7 +46,7 @@ services:
       - spark-master
 
   spark-worker-2:
-    image: carl020958/spark-worker:spark-3.1.2-mecab
+    image: spark-worker
     # image: spark-worker
     container_name: spark-worker-2
     restart: always
