--- a/SpringBoot/demo/src/main/resources/application.properties
+++ b/SpringBoot/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=80
 
 # database
-spring.datasource.url=jdbc:mysql://localhost:3306/newsDB?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/news_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
