--- a/SpringBoot/demo/src/main/resources/application.properties
+++ b/SpringBoot/demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # server
 server.port=80
 
+# logback
+spring.profiles.active=dev
+
 # database
 spring.datasource.url=jdbc:mysql://localhost:3306/news_db?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
