--- a/SpringBoot/demo/src/main/resources/logback-dev.properties
+++ b/SpringBoot/demo/src/main/resources/logback-dev.properties
@@ -4,7 +4,7 @@ log.config.level=debug
 
 #\uB85C\uADF8\uD30C\uC77C \uACBD\uB85C
 #log.config.path=../../log/
-log.config.path=/Users/imok/workspace/project/PlayData-SemiPrj/SpringBoot/demo/log
+log.config.path=~/PlayData-SemiPrj/SpringBoot/demo/log
 
 #\uB85C\uADF8\uD30C\uC77C \uBA85
 log.config.filename=log_test
