--- a/SpringBoot/demo/build.gradle
+++ b/SpringBoot/demo/build.gradle
@@ -3,8 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
-
-group = 'com.example'
+group = 'com.nft'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
